WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90647
Type-ahead doesn't work in options inside optgroups
https://bugs.webkit.org/show_bug.cgi?id=90647
Summary
Type-ahead doesn't work in options inside optgroups
Anders Carlsson
Reported
2012-07-05 18:08:14 PDT
Type-ahead doesn't work in options inside optgroups
Attachments
Patch
(3.78 KB, patch)
2012-07-05 18:16 PDT
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-07-05 18:16:19 PDT
Created
attachment 151007
[details]
Patch
Anders Carlsson
Comment 2
2012-07-05 18:24:52 PDT
Committed
r121932
: <
http://trac.webkit.org/changeset/121932
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug