Type-ahead doesn't work in options inside optgroups https://bugs.webkit.org/show_bug.cgi?id=90647 <rdar://problem/5604894>

Reviewed by Dan Bernstein.

Set the title of the menu item to a string that doesn't contain any leading or trailing whitespace.

Source/WebCore:

* platform/mac/PopupMenuMac.mm:
(WebCore::PopupMenuMac::populate):

Source/WebKit2:

* UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::populate):

Canonical link: https://commits.webkit.org/108490@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121932 268f45cc-cd09-0410-ab3c-d52691b4dbfc